[project]
name = "mvt_postgresql_ext"
description = "Extended MVT PostgreSQL provider for pygeoapi"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygeoapi",
    "SQLAlchemy>2.0",
    "geoalchemy2",
    "cachetools"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []
